# xanadu-next

./: .gitignore  README.md  areas.html  debug.html  index.html  items.html  monsters.html  pyproject.toml
DATA/BGM/: bgm.tbl
DATA/EFFECT/effect/: EFC_0000.sfx  EFC_0032.sfx  EFC_0034.sfx  EFC_0035.sfx  EFC_0036.sfx  EFC_0037.sfx  EFC_0038.sfx  EFC_0039.sfx  EFC_0040.sfx  EFC_0041.sfx  EFC_0042.sfx  EFC_0043.sfx  EFC_0050.sfx  EFC_0051.sfx  EFC_0052.sfx  EFC_0053.sfx  EFC_0054.sfx  EFC_0055.sfx  EFC_0056.sfx  EFC_0057.sfx  EFC_0200.sfx  EFC_0201.sfx  EFC_0202.sfx  EFC_0203.sfx  EFC_0204.sfx  EFC_0205.sfx  EFC_0206.sfx  EFC_0207.sfx  EFC_0208.sfx  EFC_0209.sfx  EFC_0210.sfx  EFC_0211.sfx  EFC_0301.sfx  EFC_0302.sfx  EFC_0303.sfx  EFC_0304.sfx  EFC_0306.sfx  EFC_0307.sfx  EFC_0309.sfx  EFC_0500.sfx  (+777 more)
DATA/Map/area00/: MP_0030.map  (+188 more)
DATA/WAVE/: sound.tbl
DATA/chr/: Object.tbl  motion.tbl
models/: M_0000.glb  M_0001.glb  M_0002.glb  M_0003.glb  M_0004.glb  M_0005.glb  M_0010.glb  M_0011.glb  M_0012.glb  M_0013.glb  M_0014.glb  M_0015.glb  M_0020.glb  M_0021.glb  M_0022.glb  M_0030.glb  M_0031.glb  M_0032.glb  M_0033.glb  M_0040.glb  M_0041.glb  M_0042.glb  M_0043.glb  M_0044.glb  M_0045.glb  M_0050.glb  M_0051.glb  M_0052.glb  M_0060.glb  M_0061.glb  M_0070.glb  M_0071.glb  M_0072.glb  M_0080.glb  M_0081.glb  M_0082.glb  M_0083.glb  M_0084.glb  M_0090.glb  M_0091.glb  (+70 more)
scripts/: chr_trace.gdb
src/xanadu_extract/: _layout.py  archive.py  build.py  chr_decompress.py  chr_format.py  chr_gltf.py  cli.py  debug.py  g32.py  items.py  monsters.py  objects.py  viewer.py
(+5404 files in other folders)
